--- a/app/src/main/res/drawable/selector_jm.xml
+++ b/app/src/main/res/drawable/selector_jm.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
-        android:drawable="@drawable/aguanta_jason" /> <!-- pressed -->
+        android:drawable="@drawable/jm_presionado" /> <!-- pressed -->
     <item android:state_focused="true"
-        android:drawable="@drawable/aguanta_jason" /> <!-- focused -->
-    <item android:drawable="@drawable/aguanta_jason" /> <!-- default -->
+        android:drawable="@drawable/jm_default" /> <!-- focused -->
+    <item android:drawable="@drawable/jm_default" /> <!-- default -->
 </selector>
